--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,18 +12,21 @@
   background-size: cover;
 
   &__overlay {
+    display: flex;
     width: 100%;
     height: 100%;
     background-size: cover;
-    background-image: linear-gradient(transparent, $background-color 80%);
+    background-image: linear-gradient(transparent, $background-color 95%);
 
+    justify-content: center;
+    align-items: center;
   }
 
   &__content {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 35vh 32px 0px 0px;
+    padding: 0px 32px 0px 0px;
 
     color: $header;
 
@@ -60,24 +63,40 @@
   }
 }
 
-.intro {
+.about {
   height: 100vh;
+  background-image: url('../assets/background-2.png');
+  background-size: cover;
+
+  &__overlay {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient($background-color, transparent 40%, $background-color 95%);
+
+    justify-content: center;
+    align-items: center;
+  }
+
+  &__card {
+    max-width: 420px;
+    margin: 0px 32px;
+    padding: 8px;
+    border-radius: 12px;
+
+    background-color: $card;
+    color: $card-text;
+  }
+
+  &__title {
+    padding-bottom: 16px;
+    text-align: center;
+  }
+
+  &__text {
+    padding-bottom: 8px;
+    font-size: 13px;
+    font-weight: 300;
+    text-align: center;
+  }
 }
-
-  // background-color: $background-color;
-  // height: 100%;
-
-  // &__background {
-  //   background-image: url('../assets/background.jpg');
-  //   background-size: cover;
-  //   width: 100vw;
-  //   height: 100vh;
-  //   max-height: 700px;
-
-  //   &-overlay {
-  //     background-size: cover;
-  //     width: 100%;
-  //     height: 100%;
-  //     background-image: linear-gradient(transparent, $background-color);
-  //   }
-  // }
