--- a/old src/styles/main.scss
+++ b/old src/styles/main.scss
@@ -3,55 +3,40 @@
 
 .main {
   font-family: 'Outfit', sans-serif;
-  background-color: $background-color;
+  background-image: url('../assets/background.jpg');
+  background-size: cover;
+  background-position: 25% center;
+  background-repeat: no-repeat;
+  height: 100%;
+  width: 100%;
+
+  @media screen and (min-width: $tablet-breakpoint) {
+    background-position: center 25%;
+  }
 }
 
 .hero {
   height: 100vh;
-  background-image: url('../assets/background.jpg');
-  background-size: cover;
+  background-color: #FFFFFF90;
+  color: #524e61;
 
-  &__overlay {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  
+  &__title {
     display: flex;
-    width: 100%;
-    height: 100%;
-    background-size: cover;
-    background-image: linear-gradient(transparent, $background-color 95%);
+    flex-direction: column;
+    align-items: flex-end;
+    font-size: 40px;
+    font-weight: 400;
+    width: 125px;
 
-    justify-content: center;
-    align-items: center;
-  }
-
-  &__content {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 0px 32px 0px 0px;
-
-    color: $header;
-
-    &__header {
-      width: 160px;
-      padding-right: 12px;
-
-      text-align: right;
-      font-size: 52px;
-      font-weight: 700;
-
-      @media screen and (min-width: $tablet-breakpoint) {
-        width: 320px;
-        padding-right: 32px;
-        
-        font-size: 72px;
-      }
-
-      @media screen and (min-width: $desktop-breakpoint) {
-        width: 480px;
-        padding-right: 48px;
-
-        font-size: 96px;
-      }
+    @media screen and (min-width: $tablet-breakpoint) {
+      font-size: 60px;
     }
+  }
 
     &__contacts {
       width: 50%;
@@ -107,7 +92,6 @@
     }
 
   }
-}
 
 .about {
   height: 100vh;
